--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Welcome
 ---
 
-EnFoid comprises a select team of professional entrepreneurs, managers and developers and focused on maximizing productivity and returns on unqiue projects
-
-### More Information
+EnFoid comprises a select team of professional entrepreneurs, managers and developers and focused on maximizing productivity and returns on unqiue projects.
+<br />
+<br />
+we are Currently working on updating this page .. 
+please stand by a little .. 
